force-app/main/default/objects/Client_Strategy__c/fields/Prescription_savings_outreach__c.field-meta.xml
<CustomField>
    <fullName>Prescription_savings_outreach__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prescription savings outreach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>