force-app/main/default/objects/Client_Strategy__c/fields/Preventive_drug_lists__c.field-meta.xml
<CustomField>
    <fullName>Preventive_drug_lists__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preventive drug lists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>