force-app/main/default/objects/Client_Strategy__c/fields/Prioritized_Access__c.field-meta.xml
<CustomField>
    <fullName>Prioritized_Access__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prioritized Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>