force-app/main/default/objects/Client_Strategy__c/fields/Product_breadth__c.field-meta.xml
<CustomField>
    <fullName>Product_breadth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product breadth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>