force-app/main/default/objects/Client_Strategy__c/fields/Program_administrator_vendor__c.field-meta.xml
<CustomField>
    <fullName>Program_administrator_vendor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program administrator/vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>