force-app/main/default/objects/Client_Strategy__c/fields/Quality_Cost_tiering__c.field-meta.xml
<CustomField>
    <fullName>Quality_Cost_tiering__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quality/Cost tiering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>