force-app/main/default/objects/Client_Strategy__c/fields/Reference_based_pricing__c.field-meta.xml
<CustomField>
    <fullName>Reference_based_pricing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference-based pricing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>