force-app/main/default/objects/Client_Strategy__c/fields/SDOH_and_health_equity__c.field-meta.xml
<CustomField>
    <fullName>SDOH_and_health_equity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SDOH and health equity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>