force-app/main/default/objects/Client_Strategy__c/fields/Site_of_Care_Steerage__c.field-meta.xml
<CustomField>
    <fullName>Site_of_Care_Steerage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site of Care Steerage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>