force-app/main/default/objects/Client_Strategy__c/fields/Sleep_management_programs__c.field-meta.xml
<CustomField>
    <fullName>Sleep_management_programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sleep Management Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>