force-app/main/default/objects/Client_Strategy__c/fields/Social_Determinants_of_Health__c.field-meta.xml
<CustomField>
    <fullName>Social_Determinants_of_Health__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Determinants of Health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>