force-app/main/default/objects/Client_Strategy__c/fields/Specialty_Pharmacy_carve_out__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Pharmacy_carve_out__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty Pharmacy – carve out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>