force-app/main/default/objects/Client_Strategy__c/fields/Specialty_pharmacy_network_solution__c.field-meta.xml
<CustomField>
    <fullName>Specialty_pharmacy_network_solution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty pharmacy network solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>