force-app/main/default/objects/Client_Strategy__c/fields/Standard_vs_custom_communications__c.field-meta.xml
<CustomField>
    <fullName>Standard_vs_custom_communications__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Standard vs. custom communications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>