force-app/main/default/objects/Client_Strategy__c/fields/Stop_loss_cover_for_high_cost_therapy__c.field-meta.xml
<CustomField>
    <fullName>Stop_loss_cover_for_high_cost_therapy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop loss cover for high-cost therapy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>