force-app/main/default/objects/Client_Strategy__c/fields/Streamlined_Narrow_Networks__c.field-meta.xml
<CustomField>
    <fullName>Streamlined_Narrow_Networks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Streamlined Narrow Networks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>