force-app/main/default/objects/Client_Strategy__c/fields/Tobacco_cessation_programs__c.field-meta.xml
<CustomField>
    <fullName>Tobacco_cessation_programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tobacco Cessation Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>