force-app/main/default/objects/Client_Strategy__c/fields/Tools_technologies__c.field-meta.xml
<CustomField>
    <fullName>Tools_technologies__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tools/technologies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>