force-app/main/default/objects/Client_Strategy__c/fields/Topics_communicated_to_emp_yearly__c.field-meta.xml
<CustomField>
    <fullName>Topics_communicated_to_emp_yearly__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Topics communicated to emp yearly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>