force-app/main/default/objects/Client_Strategy__c/fields/Traditional_PCP_Coordinated_Care__c.field-meta.xml
<CustomField>
    <fullName>Traditional_PCP_Coordinated_Care__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Traditional PCP Coordinated Care</label>
    <length>255</length>
    <type>Text</type>
</CustomField>