force-app/main/default/objects/Client_Strategy__c/fields/Transgender_Health_COE__c.field-meta.xml
<CustomField>
    <fullName>Transgender_Health_COE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transgender Health COE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>