force-app/main/default/objects/Client_Strategy__c/fields/Transparent_non_traditional_PBM__c.field-meta.xml
<CustomField>
    <fullName>Transparent_non_traditional_PBM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transparent non-traditional PBM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>