force-app/main/default/objects/Client_Strategy__c/fields/Value_based_benefits__c.field-meta.xml
<CustomField>
    <fullName>Value_based_benefits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value-based benefits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>