force-app/main/default/objects/Client_Strategy__c/fields/Value_Story_Supp_Other_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Value_Story_Supp_Other_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Story Supp Other Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>