force-app/main/default/objects/Client_Strategy__c/fields/Value_story_support_in_client_convos__c.field-meta.xml
<CustomField>
    <fullName>Value_story_support_in_client_convos__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value story support in client convos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>