force-app/main/default/objects/Client_Strategy__c/fields/View_of_open_enrollment_onboarding__c.field-meta.xml
<CustomField>
    <fullName>View_of_open_enrollment_onboarding__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>View of open enrollment &amp; onboarding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>