force-app/main/default/objects/Client_Strategy__c/fields/Virtual_coaching_counseling_therapy__c.field-meta.xml
<CustomField>
    <fullName>Virtual_coaching_counseling_therapy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Virtual coaching,counseling,therapy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>