force-app/main/default/objects/Client_Strategy__c/fields/Virtual_First_Solution__c.field-meta.xml
<CustomField>
    <fullName>Virtual_First_Solution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Virtual First Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>