force-app/main/default/objects/Client_Strategy__c/fields/Voluntary_benefits__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_benefits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Voluntary benefits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>