force-app/main/default/objects/Client_Strategy__c/fields/Ways_to_strengthen_value_story__c.field-meta.xml
<CustomField>
    <fullName>Ways_to_strengthen_value_story__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ways to strengthen value story</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>