force-app/main/default/objects/Client_Strategy__c/fields/Weight_Management_COE__c.field-meta.xml
<CustomField>
    <fullName>Weight_Management_COE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Weight Management COE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>