force-app/main/default/objects/Client_Strategy__c/fields/Weight_management_programs__c.field-meta.xml
<CustomField>
    <fullName>Weight_management_programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Weight management programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>