force-app/main/default/objects/Client_Strategy__c/fields/Wellness_lifestyle_coaching__c.field-meta.xml
<CustomField>
    <fullName>Wellness_lifestyle_coaching__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wellness / Lifestyle Coaching</label>
    <length>255</length>
    <type>Text</type>
</CustomField>