force-app/main/default/objects/Client_Strategy__c/fields/Wellness_program_offered_to__c.field-meta.xml
<CustomField>
    <fullName>Wellness_program_offered_to__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wellness program offered to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>