force-app/main/default/objects/Client_Strategy__c/fields/Wellness_programs__c.field-meta.xml
<CustomField>
    <fullName>Wellness_programs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wellness programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>