force-app/main/default/objects/Client_Strategy__c/fields/Wellness_Programs_Offered_Write_In__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Programs_Offered_Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wellness Programs Offered Write In</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>