force-app/main/default/objects/Client_Strategy__c/fields/What_employees_earning_incentives__c.field-meta.xml
<CustomField>
    <fullName>What_employees_earning_incentives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What % employees earning incentives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>