force-app/main/default/objects/Client_Strategy__c/fields/Women_s_health_solutions__c.field-meta.xml
<CustomField>
    <fullName>Women_s_health_solutions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Women’s health solutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>