force-app/main/default/objects/Client_Strategy__c/listViews/All_Client_Strategies.listView-meta.xml
<ListView>
    <fullName>All_Client_Strategies</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <columns>Completion_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Client Strategies</label>
</ListView>